--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "react_navigation_v5_exercise",
-  "displayName": "react_navigation_v5_exercise"
+  "name": "RNApp",
+  "displayName": "RN App"
 }
