--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_navigation_v5_exercise",
+  "name": "RNApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -18,8 +18,8 @@
     "@react-navigation/material-top-tabs": "^5.2.15",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
-    "react": "16.13.1",
-    "react-native": "0.63.2",
+    "react": "16.9.0",
+    "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-paper": "3.8.0",
     "react-native-reanimated": "^1.10.1",
