--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@react-navigation/material-top-tabs": "^5.2.15",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
+    "axios": "^0.19.2",
+    "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-paper": "3.8.0",
     "react-native-reanimated": "^1.10.1",
@@ -27,6 +31,7 @@
     "react-native-screens": "^2.9.0",
     "react-native-tab-view": "^2.15.0",
     "react-native-vector-icons": "^7.0.0",
+    "react-native-webview": "^10.3.2",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
