--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.27.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-appearance": "^0.3.4",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-paper": "3.8.0",
