- add locale - bug fix

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
     "axios": "^0.19.2",
+    "i18n-js": "^3.7.1",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "react": "16.13.1",
@@ -27,7 +28,9 @@
     "react-native-echarts-wrapper": "^2.0.0",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-localize": "^1.4.1",
     "react-native-paper": "3.8.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
