--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-localize": "^1.4.1",
+    "react-native-modalize": "^2.0.5",
     "react-native-paper": "3.8.0",
+    "react-native-portalize": "^1.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
