--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-tab-view": "^2.15.0",
+    "react-native-url-polyfill": "^1.2.0",
     "react-native-vector-icons": "^7.0.0",
     "react-native-webview": "^10.3.2",
+    "reconnecting-websocket": "^4.4.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
