--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-appearance": "^0.3.4",
+    "react-native-collapsible": "^1.5.3",
     "react-native-echarts-wrapper": "^2.0.0",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.7.0",
