--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,4 +8,8 @@ target 'RNApp' do
   use_react_native!(:path => config["reactNativePath"])
 
   use_native_modules!
+  pod 'RNShineButton', :path => '../node_modules/react-native-shine-button/ios'
+
+  use_frameworks!
+  pod 'WCLShineButton',:git => 'https://github.com/tchmhkg/WCLShineButton.git', :branch =>'master'
 end
