--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-echarts-wrapper": "^2.0.0",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-image-helper": "^0.0.3",
     "react-native-localize": "^1.4.1",
     "react-native-modalize": "^2.0.5",
     "react-native-paper": "3.8.0",
@@ -38,6 +39,7 @@
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-shine-button": "tchmhkg/react-native-shine-button",
     "react-native-tab-view": "^2.15.0",
     "react-native-url-polyfill": "^1.2.0",
     "react-native-vector-icons": "^7.0.0",
