--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-vector-icons": "^7.0.0",
     "react-native-webview": "^10.3.2",
     "reconnecting-websocket": "^4.4.0",
+    "rn-sliding-up-panel": "^2.4.3",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
