--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.6",
-    "@react-navigation/bottom-tabs": "^5.7.3",
-    "@react-navigation/drawer": "^5.8.7",
-    "@react-navigation/material-bottom-tabs": "^5.2.15",
-    "@react-navigation/material-top-tabs": "^5.2.15",
-    "@react-navigation/native": "^5.7.2",
-    "@react-navigation/stack": "^5.8.0",
-    "axios": "^0.19.2",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/material-bottom-tabs": "^5.2.16",
+    "@react-navigation/material-top-tabs": "^5.2.16",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.20.0",
     "i18n-js": "^3.7.1",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
@@ -38,12 +38,13 @@
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.9.0",
+    "react-native-screens": "^2.10.1",
     "react-native-shine-button": "tchmhkg/react-native-shine-button",
-    "react-native-tab-view": "^2.15.0",
+    "react-native-tab-view": "^2.15.1",
     "react-native-url-polyfill": "^1.2.0",
     "react-native-vector-icons": "^7.0.0",
     "react-native-webview": "^10.3.2",
+    "react-navigation": "^4.4.0",
     "reconnecting-websocket": "^4.4.0",
     "rn-sliding-up-panel": "^2.4.3",
     "styled-components": "^5.1.1"
