--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.27.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-actions-sheet": "^0.3.4",
     "react-native-appearance": "^0.3.4",
     "react-native-collapsible": "^1.5.3",
     "react-native-echarts-wrapper": "^2.0.0",
@@ -46,7 +47,6 @@
     "react-native-webview": "^10.3.2",
     "react-navigation": "^4.4.0",
     "reconnecting-websocket": "^4.4.0",
-    "rn-sliding-up-panel": "^2.4.3",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
