--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.10.1",
     "react-native-shine-button": "tchmhkg/react-native-shine-button",
+    "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.1",
     "react-native-url-polyfill": "^1.2.0",
     "react-native-vector-icons": "^7.0.0",
