--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "axios": "^0.20.0",
     "i18n-js": "^3.7.1",
     "lodash": "^4.17.20",
+    "lottie-ios": "3.1.8",
+    "lottie-react-native": "^3.5.0",
     "moment": "^2.27.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
